# component-shopify-v2

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: push.yml
component_config/: component_long_description.md  component_short_description.md  configSchema.json  documentationUrl.md  licenseUrl.md  sourceCodeUrl.md
scripts/: build_n_test.sh
src/: component.py  configuration.py
src/shopify/: query_loader.py
src/shopify/queries/: customers.graphql  events.graphql  inventory.graphql  orders.graphql  payments_transactions.graphql  product_drafts.graphql
src/shopify_cli/: client.py  query_loader.py
src/shopify_cli/queries/: BulkCustomers.graphql  BulkEvents.graphql  BulkInventory.graphql  BulkLocations.graphql  BulkOperationStatus.graphql  BulkOrders.graphql  BulkProducts.graphql  GetCustomers.graphql  GetEvents.graphql  GetInventoryItems.graphql  GetInventoryLevels.graphql  GetLocations.graphql  GetOrders.graphql  GetProductMetafields.graphql  GetProducts.graphql  GetTransactions.graphql  GetVariantMetafields.graphql
src/shopify_cli/queries/fragments/: OrderTransactions.graphql  ProductMetafields.graphql
src/shopify_cli/queries/inventory/: inventory_items.graphql
src/shopify_cli/queries/orders/: orders.graphql
src/shopify_cli/queries/products/: products.graphql
tests/: test_component.py
