[project]
name = "ex-shopify-v2"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "freezegun>=1.5.5",
    "keboola-component>=1.6.13",
    "keboola-http-client>=1.0.1",
    "keboola-utils>=1.1.0",
    "mock>=5.2.0",
    "pydantic>=2.11.9",
    "shopifyapi>=12.7.0",
    "requests>=2.31.0",
]

[dependency-groups]
dev = [
    "flake8>=7.3.0",
]

[tool.ruff]
line-length = 120
